# Quine-McCluskey-Algorithm

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md
src/: main.rs  table.rs
test_data/: sop.csv  sop1.csv  sop2.csv  sop3.csv
